# Cratis

./: .gitignore  .onedev-buildspec.yml  Cargo.toml  README.md
cratis-api/: .env  Cargo.toml
cratis-api/src/: main.rs
cratis-api/src/handler/: authentication.rs  file_management.rs  health_check.rs  mod.rs
cratis-cli/: Cargo.toml
cratis-cli/src/: cli.rs  file_watcher.rs  main.rs
cratis-core/: Cargo.toml
cratis-core/src/: backup.rs  config.rs  cratis_error.rs  error.rs  lib.rs  utils.rs
cratis-watcher/: Cargo.toml
cratis-watcher/src/: main.rs
src/: cratis_config.rs  main.rs
