[package]
name = "verbaq"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "6"
sled = "0.34"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"       # optional, for compression
zstd = "0.13"        # optional, for better compression