[package]
name = "cratis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
cratis-core = { path = "../cratis-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v5"] }
sha2 = "0.10.9"
polodb_core = "5.1.4"
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
http = "1.3.1"
once_cell = "1.21.3"