[package]
name = "cratis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
cratis-core = { path = "../cratis-core" }
axum = { version = "0.8.4", features = ["multipart"] }
tower = "0.5.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"]}
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v5"] }
sha2 = "0.10.9"
polodb_core = "5.1.4"
jsonwebtoken = "9.3.1"
http = "1.3.1"
once_cell = "1.21.3"