[package]
name = "cratis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
clap_derive = { version = "4.0.0-rc.1" }
cratis-core = { path = "../cratis-core" }
reqwest = { version = "0.11", features = ["json", "multipart", "tokio-native-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
sysinfo = "0.36.1"
serde_yaml = "0.9.33"
serde_json = "1.0.142"