[package]
name = "cratis-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
once_cell = "1.21.3"
thiserror = "2.0.12"
blake3 = "1.8.2"
glob = "0.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }